--- a/programmist.html
+++ b/programmist.html
@@ -22,7 +22,7 @@
   <h1>O-kaardi programm</h1>
 
   <ol>
-    <p>Programmi kasutamine on imelihtne. Veenduge, et töödeldav kaart kannaks nime kaart, ning oleks vormingus .gif, lisaks veenudge, et programm asuks projektiga samas kaustas. Seejärel käivitage programm ning kasutage slaidereid, et muuta kaardil nähtaval olevaid värve. Leidke endale sobivad värvid kaardile ning kasutage mugavat salvestamise viisi, uue faili leiate programmi kaustast.</p> <br>
+    <p>Programmi kasutamine on imelihtne. Veenduge, et töödeldav kaart kannaks nime kaart, ning oleks vormingus .gif, lisaks veenudge, et programm asuks projektiga samas kaustas. Seejärel käivitage programm ning kasutage slaidereid, et muuta kaardil nähtaval olevaid värve. Leidke endale sobivad värvid kaardile ning kasutage mugavat salvestamise viisi, uue faili leiate programmi kaustast.</p>
 	<p>Antud programmi saamiseks kontakteeruge Andres.r66m@gmail.com</p> <br>
 	</ol>
 
